[gd_scene load_steps=6 format=2]

[ext_resource path="res://0x72_16x16RobotTileset.v1.png" type="Texture" id=1]
[ext_resource path="res://Word/UpgradeStation.gd" type="Script" id=2]
[ext_resource path="res://Word/UpgradeMenu.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.7393, 16.9425 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.41824, 6.10652 )

[node name="UpgradeStation" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 176, 200, 16, 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.225937, -0.451874 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 7.62939e-06, 9.54053 )
shape = SubResource( 2 )

[node name="UpgradeMenu" parent="." instance=ExtResource( 3 )]

[connection signal="area_entered" from="." to="." method="_on_UpgradeStation_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_UpgradeStation_area_exited"]
